--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FF5C372NE7"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag("js", new Date());
       gtag("config", "G-FF5C372NE7");
     </script>
@@ -19,24 +21,38 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adinkra Media</title>
+
+    <!-- ✅ Add this meta description -->
+    <meta
+      name="description"
+      content="Adinkra Media — Spiritually rooted, sovereign African media sharing Pan-African news, stories, and culture from Africa and the diaspora."
+    />
+
+    <title>Adinkra Media | Spiritually Rooted African Stories</title>
 
     <!-- ✅ Favicon -->
     <link rel="icon" type="image/jpeg" href="/favicon.jpg" />
 
     <!-- ✅ Open Graph Meta Tags -->
-    <meta property="og:title" content="Adinkra Media" />
-    <meta property="og:description" content="Spiritually rooted, sovereign African media." />
+    <meta property="og:title" content="Adinkra Media | Spiritually Rooted African Stories" />
+    <meta
+      property="og:description"
+      content="Adinkra Media — Spiritually rooted, sovereign African media sharing Pan-African news, stories, and culture from Africa and the diaspora."
+    />
     <meta property="og:image" content="https://adinkramedia.com/og-default.jpg" />
     <meta property="og:url" content="https://adinkramedia.com" />
     <meta property="og:type" content="website" />
 
     <!-- ✅ Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Adinkra Media" />
-    <meta name="twitter:description" content="Spiritually rooted, sovereign African media." />
+    <meta name="twitter:title" content="Adinkra Media | Spiritually Rooted African Stories" />
+    <meta
+      name="twitter:description"
+      content="Spiritually rooted, sovereign African media sharing Pan-African news, stories, and culture."
+    />
     <meta name="twitter:image" content="https://adinkramedia.com/og-default.jpg" />
   </head>
+
   <body class="bg-adinkra-bg text-adinkra-gold">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
