--- a/index.html
+++ b/index.html
@@ -55,6 +55,35 @@
 
   <body class="bg-adinkra-bg text-adinkra-gold">
     <div id="root"></div>
+
+    <!-- ✅ Adsterra Native Banner (Desktop) -->
+    <div class="hidden md:block text-center my-4">
+      <script
+        async="async"
+        data-cfasync="false"
+        src="//pineegypt.com/0ee13306bb53827f2b0fac87966aaac0/invoke.js"
+      ></script>
+      <div id="container-0ee13306bb53827f2b0fac87966aaac0"></div>
+    </div>
+
+    <!-- ✅ Adsterra Native Banner (Mobile) -->
+    <div class="block md:hidden text-center my-4">
+      <script type="text/javascript">
+        atOptions = {
+          key: "f58bb7dacd9d77f1bcea231e9e2052b5",
+          format: "iframe",
+          height: 50,
+          width: 320,
+          params: {},
+        };
+      </script>
+      <script
+        type="text/javascript"
+        src="//pineegypt.com/f58bb7dacd9d77f1bcea231e9e2052b5/invoke.js"
+      ></script>
+    </div>
+
+    <!-- ✅ Your React App -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
