--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
       gtag("config", "G-FF5C372NE7");
     </script>
 
-    <!-- ✅ Google AdSense -->
+    <!-- ✅ Google AdSense (UPDATED NEW ACCOUNT) -->
     <script
       async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2302585712980431"
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2408975430853639"
       crossorigin="anonymous"
     ></script>
+
+    <!-- ✅ REQUIRED FOR OWNERSHIP VERIFICATION -->
+    <meta name="google-adsense-account" content="ca-pub-2408975430853639" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- ✅ Add this meta description -->
+    <!-- ✅ Meta Description -->
     <meta
       name="description"
       content="Adinkra Media — Spiritually rooted, sovereign African media sharing Pan-African news, stories, and culture from Africa and the diaspora."
